After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 628823 - "Salut" -> "People Nearby" in the error message
"Salut" -> "People Nearby" in the error message
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
unspecified
Other All
: Normal minor
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2010-09-05 15:09 UTC by Marek Černocký
Modified: 2011-08-29 10:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
my patch for the bug (585 bytes, patch)
2010-10-23 22:53 UTC, Francisca
needs-work Details | Review
my patch for the bug (second try) (582 bytes, patch)
2010-10-25 22:46 UTC, Francisca
none Details | Review
patch (third try) (586 bytes, patch)
2010-10-25 22:55 UTC, Francisca
accepted-commit_now Details | Review
patch ready to be commited (1.10 KB, patch)
2010-10-25 23:27 UTC, Francisca
none Details | Review

Description Marek Černocký 2010-09-05 15:09:52 UTC
The result of BUG 459546 has been to change "Salut" to "People Nearby". But the error message "Don't display any dialogs if there are any non-Salut accounts" (/src/empathy-accounts.c) still use term "Salut". It's confusing.
Comment 1 Guillaume Desmottes 2010-09-06 07:58:58 UTC
Would
""Don't display any dialogs if there are any non 'People Nearby' accounts"
be clearer?
Comment 2 Marek Černocký 2010-09-06 09:28:40 UTC
Yes. Or:

"Don't display any dialogs if there are any account of non 'People Nearby' type"

? (I'm not native English speaker so It could be incorrectly.)
Comment 3 Francisca 2010-10-23 22:53:38 UTC
Created attachment 173098 [details] [review]
my patch for the bug

I changed "Salut" for "People Nearby" on the error message.
Comment 4 Danielle Madeley 2010-10-23 23:31:53 UTC
Review of attachment 173098 [details] [review]:

The sentence doesn't make sense. It should be something like "if there are only "People Nearby" accounts".
Comment 5 Francisca 2010-10-25 22:46:34 UTC
Created attachment 173232 [details] [review]
my patch for the bug (second try)

Now I fixed the grammar mistake, I am not a native english speaker, that's why I sometimes could write non sense sentences.
Comment 6 Francisca 2010-10-25 22:51:02 UTC
hmmm... it should be "there aren't only People Nearby accounts"
to preserve the original sense of "if thera any non-Salut accounts"

right?
Comment 7 Francisca 2010-10-25 22:55:30 UTC
Created attachment 173235 [details] [review]
patch (third try)
Comment 8 Francisca 2010-10-25 22:55:52 UTC
I hope that one is right :)
Comment 9 Danielle Madeley 2010-10-25 22:57:27 UTC
Review of attachment 173235 [details] [review]:

Looks good!
Comment 10 Francisca 2010-10-25 23:27:07 UTC
Created attachment 173239 [details] [review]
patch ready to be commited

there it is
Comment 11 Danielle Madeley 2010-10-25 23:30:19 UTC
Committed!