empathy-account: change Salut -> People Nearby

Changed error message
"Don't display any dialogs if there are any non-Salut accounts"
to "Don't display any dialogs unless there are only 'People Nearby' accounts"

https://bugzilla.gnome.org/show_bug.cgi?id=628823